# tauri-leptos-template

./: .taurignore  Cargo.toml  README.md  index.html  tailwind.css
src/: app.rs  main.rs
src-models/: Cargo.toml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
