[package]
name = "tauri-leptos-template-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
shared-models = { path = "src-models" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace]
members = ["src-models", "src-tauri"]
